5/superdev-crm-customer-part2/specs/spring-boot-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-boot-postgres
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: spring-boot-postgres
      labels:
        app: spring-boot-postgres
    spec:
      containers:
      - name: spring-boot-postgres
        image: superdev-crm-customer
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "300Mi"
            cpu: "500m"
