5/superdev-crm-customer-part2/specs/crm-customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-customer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm-customer
  template:
    metadata:
      name: crm-customer
      labels:
        app: crm-customer
    spec:
      containers:
      - name: crm-customer
        image: malditoidealismo/crm-customer
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "300Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: NodePort
  selector:
    app: crm-customer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
