5/superdev-crm-customer-part2/specs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: NodePort
  selector:
    app: spring-boot-postgres
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
