5/superdev-crm-customer-part2/specs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /customer-service/?(.*)
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 80
